# hoogle-sheets

./: .gitignore  README.md  build.sbt  hoogle-sheets.cabal  stack.yaml
haskell-server/: Actors.hs  Main.hs  Messages.hs
scala-client/: Main.scala  build.sbt
scala-client/assets/: client.js  client.js.map  index.html  style.css
scala-server/: Main.scala  SpreadSheet.scala
scala-shared/: Messages.scala
