name:                hoogle-sheets
version:             0.1
homepage:            http://www.informatik.uni-bremen.de/~cxl/lehre/rp.ss17/
author:              Martin Ring
maintainer:          martin.ring@dfki.de
copyright:           2017 Martin Ring
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hoogle-sheets
  hs-source-dirs:      haskell-server
  main-is:             Main.hs
  other-modules:       Messages Actors
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, random, aeson,
                       wai-app-static, warp,
                       websockets, wai-websockets
  default-language:    Haskell2010
